Finish the tablet version media queries & Handle every issue faced on mobile version

--- a/css/form.css
+++ b/css/form.css
@@ -9,6 +9,7 @@
 }
 /* start landing section */
 main .landing {
+  padding-top: 0.1px;
   background-color: var(--secondary-color);
 }
 main .landing .heading {
